fix: #1 links are almost invisible in text (#1127)

--- a/mw-webapp/src/utils/markdown/Markdown.module.scss
+++ b/mw-webapp/src/utils/markdown/Markdown.module.scss
@@ -1,7 +1,7 @@
 @import "src/styles/variables";
 
 .a {
-  color: var(--primaryTextColor);
+  color: var(--generalPrimaryColor);
 }
 
 .imageContainer {
